k8s-resources/deployment-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
      - name: hello-world-app
        image: registry.gitlab.com/PROJECT_NAME/REPO_NAME:TAG
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
      imagePullSecrets:
      - name: gitlab-registry-secret
# all are place holders IMAGE_NAME essentially is the same I used to build and push the image, containing the github sha as well
